// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`General renders intercept error 1`] = `
<div>
  <div
    key="url"
  >
    <span>
      Request URL:
    </span>
    <span />
  </div>
  <div
    key="method"
  >
    <span>
      Request Method:
    </span>
    <span />
  </div>
  <div
    key="status"
  >
    <span>
      Status Code:
    </span>
    <span>
      ERR_TIMED_OUT
    </span>
  </div>
  <div
    key="serverIPAddress"
  >
    <span>
      Remote Address:
    </span>
    <span />
  </div>
</div>
`;

exports[`General renders without crashing 1`] = `
<div>
  <div
    key="url"
  >
    <span>
      Request URL:
    </span>
    <span />
  </div>
  <div
    key="method"
  >
    <span>
      Request Method:
    </span>
    <span />
  </div>
  <div
    key="status"
  >
    <span>
      Status Code:
    </span>
    <span />
  </div>
  <div
    key="serverIPAddress"
  >
    <span>
      Remote Address:
    </span>
    <span />
  </div>
</div>
`;
